<resources>
    <string name="app_name">Rexified</string>
    <string name="signIn_email">Email</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_signUp">Sign Up</string>
    <string name="signIn_logIn">Login</string>

    <string name="signUp_first_name">First name</string>
    <string name="signUp_last_name">Last name</string>
    <string name="signUp_age">Age</string>
    <string name="signUp_gender">Gender</string>
    <string name="signUp_email">Email address</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_signUp">Sign Up</string>
    <string name="signUp_confirm">Confirm Password</string>
    <string name="title_activity_recreation_map">Map</string>

    <string name="sport_prompt">Choose a sport</string>
    <string name="user_prompt">Current Users</string>

    <string-array name="sport_arrays">
        <item>Choose a sport</item>
        <item>Volleyball</item>
        <item>Basketball</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="user_arrays">
        <item>Current Users</item>
        <item>John(Level 3)</item>
        <item>Ben(Level 2)</item>
        <item>Jessica(Level 1)</item>
    </string-array>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
</resources>
