<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:id="@+id/firstname"
            android:hint="@string/signUp_first_name"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:id="@+id/lastname"
            android:hint="@string/signUp_last_name"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:id="@+id/etage"
            android:hint="@string/signUp_age"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:id="@+id/gender"
            android:hint="@string/signUp_gender"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:background="#ffffff"
            android:hint="@string/signUp_email"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:background="#ffffff"
            android:hint="@string/signUp_password"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="#ffffff"
            android:id="@+id/etPasswordConfirm"
            android:hint="@string/signUp_confirm"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="257dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background">
        android:id="@+id/relativeLayout">


    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/etPostalCode"
        android:background="#ffffff"
        android:hint="@string/signUp_last_name"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:id="@+id/etName"
        android:hint="@string/signUp_first_name"
        android:paddingLeft="10dp"/>


</LinearLayout>