<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="257dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:id="@+id/etName"
                android:hint="@string/signUp_first_name"
                android:paddingLeft="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:id="@+id/etPostalCode"
                android:background="#ffffff"
                android:hint="@string/signUp_last_name"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmail"
                android:background="#ffffff"
                android:hint="@string/signUp_email"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"/>



            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:background="#ffffff"
                android:hint="@string/signUp_password"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"/>


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:background="#ffffff"
                android:id="@+id/etPasswordConfirm"
                android:hint="@string/signUp_confirm"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"/>

        </LinearLayout>



    </RelativeLayout>




</LinearLayout>