<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">
    tools:context="com.example.thedata_minors.recified.login.Activity.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="329dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/input"
        android:id="@+id/Password"
        android:hint="@string/signIn_password"
        android:inputType="textPassword"
        android:text="12345678"
        android:textColor="#7D7D7D"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dp"
        android:layout_marginBottom="190dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/input"
        android:id="@+id/Username"
        android:text="dat@thon.com"
        android:textColor="#7D7D7D"
        android:hint="@string/signIn_email"
        android:paddingLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn_signUp"
        android:id="@+id/signUp"
        android:onClick="SignUp"
        android:background="@drawable/button_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"

        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login" />

    <Button
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:id="@+id/login"

        android:textColor="#FFFFFF"
        android:text="@string/signIn_logIn"
        android:textStyle="bold"
        android:onClick="Login"

        android:background="@drawable/button_style"

        android:layout_above="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" />


</RelativeLayout>
